@@ -1,4 +1,5 @@
-/* Copyright (c) 2001 - 2013 OpenPlans - www.openplans.org. All rights reserved.
+/* (c) 2014 - 2015 Open Source Geospatial Foundation - all rights reserved
+ * (c) 2001 - 2013 OpenPlans
  * This code is licensed under the GPL 2.0 license, available at the root
  * application directory.
  */
@@ -8,7 +9,6 @@ import java.io.File;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.List;
-
 import org.geoserver.catalog.Catalog;
 import org.geoserver.catalog.CatalogBuilder;
 import org.geoserver.catalog.CoverageInfo;
@@ -16,16 +16,15 @@ import org.geoserver.catalog.CoverageStoreInfo;
 import org.geoserver.catalog.LayerInfo;
 import org.geoserver.catalog.ResourceInfo;
 import org.geoserver.catalog.WorkspaceInfo;
+import org.geoserver.importer.job.ProgressMonitor;
 import org.geotools.coverage.grid.io.AbstractGridCoverage2DReader;
 import org.geotools.coverage.grid.io.AbstractGridFormat;
-import org.geoserver.importer.job.ProgressMonitor;
 import org.opengis.referencing.operation.OperationNotFoundException;
 
 /**
  * Base for formats that have a GridFormat implementation.
- *  
- * @author Justin Deoliveira, OpenGeo
  *
+ * @author Justin Deoliveira, OpenGeo
  */
 public class GridFormat extends RasterFormat {
 
@@ -49,7 +48,7 @@ public class GridFormat extends RasterFormat {
     @Override
     public boolean canRead(ImportData data) throws IOException {
         AbstractGridFormat gridFormat = gridFormat();
-        
+
         File f = file(data);
         if (f != null) {
             return gridFormat.accepts(f);
@@ -58,8 +57,8 @@ public class GridFormat extends RasterFormat {
     }
 
     @Override
-    public CoverageStoreInfo createStore(ImportData data, WorkspaceInfo workspace, Catalog catalog) 
-        throws IOException {
+    public CoverageStoreInfo createStore(ImportData data, WorkspaceInfo workspace, Catalog catalog)
+            throws IOException {
         File f = file(data);
         if (f == null) {
             return null;
@@ -67,53 +66,63 @@ public class GridFormat extends RasterFormat {
 
         CatalogBuilder cb = new CatalogBuilder(catalog);
         cb.setWorkspace(workspace);
-        
+
         CoverageStoreInfo store = cb.buildCoverageStore(data.getName());
-        store.setURL(f.toURI().toURL().toString());
+        store.setURL(relativeDataFileURL(f.toURI().toURL().toString(), catalog));
         store.setType(gridFormat().getName());
-        
+
         return store;
     }
 
     @Override
-    public List<ImportTask> list(ImportData data, Catalog catalog, ProgressMonitor monitor) 
+    public List<ImportTask> list(ImportData data, Catalog catalog, ProgressMonitor monitor)
             throws IOException {
-        AbstractGridCoverage2DReader reader = gridReader(data);
-        
-        List<ImportTask> tasks = new ArrayList<ImportTask>();
-        if (reader != null) {
-            CatalogBuilder cb = new CatalogBuilder(catalog);
+        AbstractGridCoverage2DReader reader = null;
+        try {
+            reader = gridReader(data);
 
-            //create a dummy store
-            CoverageStoreInfo store = cb.buildCoverageStore("dummy");
-            store.setType(gridFormat().getName());
-            cb.setStore(store);
+            List<ImportTask> tasks = new ArrayList<ImportTask>();
+            if (reader != null) {
+                CatalogBuilder cb = new CatalogBuilder(catalog);
 
-            try {
-                CoverageInfo coverage = cb.buildCoverage(reader, null);
-                coverage.setStore(null);
-                coverage.setNamespace(null);
-                cb.setupBounds(coverage, reader);
+                // create a dummy store
+                CoverageStoreInfo store = cb.buildCoverageStore("dummy");
+                store.setType(gridFormat().getName());
+                cb.setStore(store);
 
-                LayerInfo layer = cb.buildLayer((ResourceInfo)coverage);
+                try {
+                    CoverageInfo coverage = cb.buildCoverage(reader, null);
+                    coverage.setStore(null);
+                    coverage.setNamespace(null);
+                    cb.setupBounds(coverage, reader);
 
-                ImportTask task = new ImportTask(data);
-                task.setLayer(layer);
-                tasks.add(task);
+                    LayerInfo layer = cb.buildLayer((ResourceInfo) coverage);
 
-            } catch (OperationNotFoundException onfe) {
-                throw new ValidationException("Unable to process "
-                        + " coordinate reference system of data. The specific"
-                        + " problem is : " + onfe.getMessage(), onfe);
-            } catch (Exception e) {
-                throw (IOException) new IOException(). initCause(e);
+                    ImportTask task = new ImportTask(data);
+                    task.setLayer(layer);
+                    tasks.add(task);
+
+                } catch (OperationNotFoundException onfe) {
+                    throw new ValidationException(
+                            "Unable to process "
+                                    + " coordinate reference system of data. The specific"
+                                    + " problem is : "
+                                    + onfe.getMessage(),
+                            onfe);
+                } catch (Exception e) {
+                    throw (IOException) new IOException().initCause(e);
+                }
+            }
+            return tasks;
+        } finally {
+            if (reader != null) {
+                reader.dispose();
             }
         }
-        return tasks;
     }
 
     public AbstractGridCoverage2DReader gridReader(ImportData data) throws IOException {
-        //try file based
+        // try file based
         File f = null;
         if (data instanceof SpatialFile) {
             f = ((SpatialFile) data).getFile();
@@ -129,7 +138,7 @@ public class GridFormat extends RasterFormat {
     }
 
     File file(ImportData data) {
-        //try file based
+        // try file based
         File f = null;
         if (data instanceof SpatialFile) {
             f = ((SpatialFile) data).getFile();
@@ -145,10 +154,11 @@ public class GridFormat extends RasterFormat {
             synchronized (this) {
                 if (gridFormat == null) {
                     try {
-                        gridFormat = gridFormatClass.newInstance();
+                        gridFormat = gridFormatClass.getDeclaredConstructor().newInstance();
                     } catch (Exception e) {
-                        throw new RuntimeException("Unable to create instance of: " + 
-                            gridFormatClass.getSimpleName(), e);
+                        throw new RuntimeException(
+                                "Unable to create instance of: " + gridFormatClass.getSimpleName(),
+                                e);
                     }
                 }
             }
@@ -166,20 +176,13 @@ public class GridFormat extends RasterFormat {
 
     @Override
     public boolean equals(Object obj) {
-        if (this == obj)
-            return true;
-        if (obj == null)
-            return false;
-        if (getClass() != obj.getClass())
-            return false;
+        if (this == obj) return true;
+        if (obj == null) return false;
+        if (getClass() != obj.getClass()) return false;
         GridFormat other = (GridFormat) obj;
         if (gridFormatClass == null) {
-            if (other.gridFormatClass != null)
-                return false;
-        } else if (!gridFormatClass.equals(other.gridFormatClass))
-            return false;
+            if (other.gridFormatClass != null) return false;
+        } else if (!gridFormatClass.equals(other.gridFormatClass)) return false;
         return true;
     }
-
-    
 }
